# text_to_discocirc

./: .gitignore  Network.py  Notes for software team  README.md  discocirc.py  discocirc_utils.py  frame.py  generate_answer_pair_number.py  generate_context_circuit.py  generate_task1_data.py  generate_vocab.py  generate_vocab_2.py  model.py  model_train.py  prepare_data_utils.py  prepare_dataset.py  pulling_out.py  pyproject.toml  setup.cfg  tech-demo.ipynb  test.ipynb  utils.py  vocab_qa2_train.p
data/pickled_dataset/: isin_dataset_task2_train.pkl
data/task_vocab_dicts/: en_qa1.p  en_qa15.p  en_qa16.p  en_qa1_test.p  en_qa1_train.p  en_qa2.p  en_qa2_test_HYPHENATED.p  en_qa2_train_HYPHENATED.p  en_qa7.p
data/tasks_1-20_v1-2/: desktop.ini
discocirc/: __init__.py  version.py
discocirc/diag/: __init__.py  coref_nouns.py  drag_up.py  expand_s_types.py  frame.py
discocirc/expr/: __init__.py  ccg_to_expr.py  ccg_type_check.py  coordination_expand  coordination_expand.py  expr.py  expr_expand_pronouns.py  expr_normal_form.py  expr_possessive_pronouns.py  expr_to_diag.py  expr_type_check.py  expr_uncurry.py  inverse_beta.py  n_type_expand.py  normal_form.py  pull_out.py  resolve_pronouns.py  s_type_expand.py  to_discopy_diagram.py  type_check.py  type_expand.py  uncurry.py
discocirc/helpers/: closed.py  discocirc_utils.py
discocirc/pipeline/: sentence_to_circuit.py  text_to_circuit.py
notebooks/: discocirc_pipeline_tutorial.ipynb  dmm-demo-2024.ipynb  pulling-out-examples.ipynb  qpl 2023 pipeline tutorial.ipynb  tech-demo.ipynb
pipeline_paper_images/: fig1.tikz  generate_images.py
saved_models/: textspace_trained_model_boxes_July_11_21_57.pkl  trained_model_boxes.pkl
src/: add_logits_model_train.py  is_in_model_test.py  is_in_model_train.py  isin_model_one_network_train.py  lstm_model_test.py  lstm_model_train.py  model_test.py  model_train.py  pull_out_demo.ipynb  pulling_out_playground.py  test_model.py  textspace_model_test.py  textspace_model_train.py  train_model.py
task_vocab_dicts/: en_qa1_train.p  qa1_test.p
tests/: expr_type_check.py  sentence_to_diag_test.py
(+101 files in other folders)
