[metadata]
name = discocirc
description = Automatic DisCoCirc generation from CCG
long_description = file: README.md
long_description_content_type = text/markdown
author = Cambridge Quantum QNLP team
license = Apache-2.0
license_files = file: LICENSE
project_urls =
    Source Code = https://github.com/CQCL/text_to_discocirc
keywords =
    category theory
    ccg
    circuits
    combinatory categorial grammar
    diagrams
    discocat
    language
    linguistics
    natural language processing
    nlp
    qnlp
    quantum
    quantum computing
    quantum natural language processing
    quantum nlp
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering

[options]
packages =
    discocirc
    discocirc.diag
    discocirc.expr
    discocirc.helpers
    discocirc.pipeline
    discocirc.semantics

install_requires =
    discopy ~= 0.5.0
    pyyaml
    spacy >= 3.0
    lambeq @ git+https://github.com/y-richie-y/lambeq.git@bobcat-deps
    prettytable
python_requires = >=3.8

test =
    coverage[toml]
    pytest

[flake8]
count = True
statistics = True

max-doc-length = 72

ignore =
    # The default list except for W504 (line break after binary operator)
    E121,E123,E126,E226,E24,E704,W503
extend-ignore =
    # Also ignore E203 (whitespace before ‘,’, ‘;’, or ‘:’)
    E203
per-file-ignores =
    # Ignore missing copyright notices and import misordering in init files
    */__init__.py:C801,I100,I101,I202

enable-extensions =
    # Check for missing copyright notices
    C801
copyright-check = True

# options for import order checks
application-import-names = discocirc
import-order-style = google
